
2.3.11
  b - no longer ignoring fread return values in linux cpuset code (gcc 4.3.3)
  b - fixed segfault for when TORQUE thinks there's a nanny but there isn't
  b - Bugzilla bug 57. Check return value of malloc for tracejob for Linux
      (Chris Samuel - Univ. of Melbourne)
  b - fix so "gres" config gets displayed by pbsnodes

2.3.10
  b - Fixed a bug in run_pelog (src/resmom/prolog.c) where epilogue.user 
      was given the argument list for prologue scripts and not 
      epilogue scripts. Ticket 6296.
  b - Fixed pbs_mom's default restart behavior. On a restart the MOM is 
      suppose to terminate jobs that were in a running state while the 
      MOM was up and report them to the batch server where the job will 
      be reset to a queued state. But it should not try and kill any of 
      the running processes that were associated with the job. Prior to 
      this fix the MOM would try and kill running processes associated 
      with any running jobs. 
  n - 01/15/2010 snapshot torque-2.3.10-snap.201001151340.tar.gz created.
  b - Made changes to source files and configure.ac to enable TORQUE to
      compile on Solaris5 platform with gcc-warnings enabled. Currently
      TORQUE must be compiled with the --disable-gui option because
      X11 support on Solaris is not working with the current TORQUE 
      build scripts.
  e - added qmgr server attribute job_start_timeout, specifies timeout to be
      used for sending job to mom. If not set, tcp_timeout is used.
  n - 2.3.10 released on 02/02/10 (Groundhog Day!)
      
2.3.9
  b - Made a fix to svr_get_privilege(). On some architectures a non-root user
      name would be set to null after the line " host_no_port[num_host_chars] = 0;"
      because num_host_chars was = 1024 which was the size of hot_no_port. 
      The null termination needed to happen at 1023. There were other problems
      with this function so code was added to  validate the incoming